--- a/resources/views/template/categories.html
+++ b/resources/views/template/categories.html
@@ -9,10 +9,10 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>{{ config('app.name') }}</title>
+    <title>Store - Your Best Marketplace</title>
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link href="{{ asset('style/main.css') }}" rel="stylesheet" />
+    <link href="style/main.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -38,98 +38,37 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="/">Home </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="/categories.html">Categories</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Rewards</a>
             </li>
-            @guest
             <li class="nav-item">
-              <a class="nav-link" href="{{ route('auth.register') }}">Sign Up</a>
+              <a class="nav-link" href="/register.html">Sign Up</a>
             </li>
             <li class="nav-item">
               <a
                 class="btn btn-success nav-link px-4 text-white"
-                href="{{ route('auth.login') }}"
+                href="/login.html"
                 >Sign In</a
               >
             </li>
-            @endguest
-            @auth
-            <li class="nav-item">
-              <a class="nav-link" href="">{{ auth()->user()->name }}</a>
-            </li>
-            
-            <li class="nav-item">
-              <a
-                class="btn btn-danger nav-link px-4 text-white"
-                href="{{ route('logout') }}"
-                >Logout</a
-              >
-            </li>
-            @endauth
           </ul>
         </div>
       </div>
     </nav>
 
     <!-- Page Content -->
-    <div class="page-content page-home">
-      <section class="store-carousel">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12" data-aos="zoom-in">
-              <div
-                id="storeCarousel"
-                class="carousel slide"
-                data-ride="carousel"
-              >
-                <ol class="carousel-indicators">
-                  <li
-                    data-target="#storeCarousel"
-                    data-slide-to="0"
-                    class="active"
-                  ></li>
-                  <li data-target="#storeCarousel" data-slide-to="1"></li>
-                  <li data-target="#storeCarousel" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img
-                      src="/images/banner.jpg"
-                      class="d-block w-100"
-                      alt="Carousel Image"
-                    />
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      src="/images/banner.jpg"
-                      class="d-block w-100"
-                      alt="Carousel Image"
-                    />
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      src="/images/banner.jpg"
-                      class="d-block w-100"
-                      alt="Carousel Image"
-                    />
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+    <div class="page-content page-categories">
       <section class="store-trend-categories">
         <div class="container">
           <div class="row">
             <div class="col-12" data-aos="fade-up">
-              <h5>Trend Categories</h5>
+              <h5>All Categories</h5>
             </div>
           </div>
           <div class="row">
@@ -248,7 +187,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12" data-aos="fade-up">
-              <h5>New Products</h5>
+              <h5>All Products</h5>
             </div>
           </div>
           <div class="row">
@@ -446,34 +385,12 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="{{ asset('vendor/jquery/jquery.slim.min.js') }}"></script>
-    <script src="{{ asset('vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+    <script src="/vendor/jquery/jquery.slim.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
-    <script src="{{ asset('script/navbar-scroll.js') }}"></script>
-    @yield('script')
-    
-<script>
-  @if(session()->has('successMessage'))
-  Vue.use(Toasted);
-
-  var register = new Vue({
-    el: "#register",
-    mounted() {
-      AOS.init();
-      this.$toasted.success(
-        "{{ session()->get('successMessage') }}",
-        {
-          position: "top-center",
-          className: "rounded",
-          duration: 1000,
-        }
-      );
-    }
-  });
-  @endif
-</script>
+    <script src="/script/navbar-scroll.js"></script>
   </body>
 </html>
